--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -218,7 +218,9 @@ entregas.data %>% mutate(Periodo=Entrega.Week<=15) -> entregas.data
 ggplot(entregas.data, aes(x=as.factor(Entrega.Week), fill=as.factor(Objetivo)))+ scale_fill_brewer(type="div")  + geom_bar(position="identity") + labs(x="Week", y="Number of objectives") + scale_x_discrete( limits=1:22)+theme_bw()
 @
 
-Figure \ref{fig:bars.period} shows a barplot of the number of objectives, with color indicating the actual number of objective. We can see what is the usual period of submission for every objective (objective 0 finishing in the second week, for instance, objective 1 in the 5th week, objective 2 in the 7th and so on). Submissions take a dive after the 15th week, but this is due to many factors, including the fact that it is a vacation period and that at least some of the students stop submitting after reaching the minimum number of objectives required for passing.
+Figure \ref{fig:bars.period} shows a barplot of the number of objectives, with color indicating the actual number of objective. We can see what is the usual period of submission for every objective (objective 0 finishing in the second week, for instance, objective 1 in the 5th week, objective 2 in the 7th and so on). Submissions take a dive after the 15th week, but this is due to many factors, including the fact that it is a vacation period and that at least some of the students stop submitting after reaching the minimum number of objectives required for passing. We also see a dip in the 5th week, where there is a national holiday that, in the past years, has implied essentially a week without classes (and certainly without presential classes). This dip repeats itself in the 8th week (another national holiday) and the 13th week (a week-long national holiday, including Constitution day on the 6th of December and Immaculate Conception day on the 8th of December). Submissions hardly recover after that week; in many cases this is due to the students reaching the minimum requirement in week 11 and dropping out. But even if the student wants to continue, it is complicated for them due to the workload in other classes, which usually concentrate on the last week of presential classes. With this data, we can already see that attending class contributes to the submission of objectives. But we need to delve a bit deeper into this data, since it might be other factors, like help from other students, or simply the fact that during weeks with classes the student allocate more time to work (in this and other courses).
+
+
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{../rpg.bib,../dev.bib, ../agile.bib,../learning-analytics.bib,../pbl.bib}
