--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -169,7 +169,7 @@ In the second case, there might be a small delay between the moment the objectiv
 
 In order to be able to normalize and compare different courses, these dates are counted from the day the course start. Data used in this paper is available at the same GitHub repository as this paper. Initial data as indicates is shown in Figure \ref{fig:initial}.
 %
-<<initial, echo=FALSE,warning=FALSE, fig.pos="h!tb", fig.env="figure*", fig.cap="Segment plot showing the number of days from the beginning of the course when objectives (indicated by color) have been submitted, with the segment end indicating when they have been approved. From bottom to top, this has been done for course 2021-22, 22-23 and 23-24 (still ongoing). The gap shows the period between the \"ordinary\" and \"extraordinary\" evaluation." >>=
+<<initial, echo=FALSE,warning=FALSE, fig.height=5, fig.pos="h!tb", fig.env="figure*", fig.cap="Segment plot showing the number of days from the beginning of the course when objectives (indicated by color) have been submitted, with the segment end indicating when they have been approved. From bottom to top, this has been done for course 2021-22, 22-23 and 23-24 (still ongoing). The gap shows the period between the \"ordinary\" and \"extraordinary\" evaluation." >>=
 library(ggplot2)
 load("../data/entregas-data.rda")
 # sort entregas.data by Curso and Entrega.Days
