--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -220,6 +220,14 @@ ggplot(entregas.data, aes(x=as.factor(Entrega.Week), fill=as.factor(Objetivo)))+
 
 Figure \ref{fig:bars.period} shows a barplot of the number of objectives, with color indicating the actual number of objective. We can see what is the usual period of submission for every objective (objective 0 finishing in the second week, for instance, objective 1 in the 5th week, objective 2 in the 7th and so on). Submissions take a dive after the 15th week, but this is due to many factors, including the fact that it is a vacation period and that at least some of the students stop submitting after reaching the minimum number of objectives required for passing. We also see a dip in the 5th week, where there is a national holiday that, in the past years, has implied essentially a week without classes (and certainly without presential classes). This dip repeats itself in the 8th week (another national holiday) and the 13th week (a week-long national holiday, including Constitution day on the 6th of December and Immaculate Conception day on the 8th of December). Submissions hardly recover after that week; in many cases this is due to the students reaching the minimum requirement in week 11 and dropping out. But even if the student wants to continue, it is complicated for them due to the workload in other classes, which usually concentrate on the last week of presential classes. With this data, we can already see that attending class contributes to the submission of objectives. But we need to delve a bit deeper into this data, since it might be other factors, like help from other students, or simply the fact that during weeks with classes the student allocate more time to work (in this and other courses).
 
+<<weekday.submissions, message=FALSE, echo=FALSE, warning=FALSE, fig.height=4, fig.pos="h!tb", fig.cap="Barplot showing the number of submissions by day.">>=
+# map dow.entrega to Weekday lunes=Monday, martes=Tuesday, miercoles=Wednesday, jueves=Thursday, viernes=Friday, sabado=Saturday, domingo=Sunday
+entregas.data %>% mutate(Weekday.Submission=as.POSIXlt(Entrega)$wday,Weekday.Pass=as.POSIXlt(Correccion)$wday) -> entregas.data
+ggplot(entregas.data, aes(x=Weekday.Submission,fill=as.factor(Curso)))+ geom_bar(position="dodge") + labs(x="Weekday", y="Number of submissions") +theme_bw()
+@
+
+Figure \ref{fig:weekday.submissions} shows submissions by day of the week, starting by Sunday (day 0) to Saturday (day 6). Classes take place on days 4 and 5, Thursday and Friday. Thursdays take place in a big room with all students attending (it is called the "Theory" class regularly); Fridays are split equally in two groups, and take place in a different class with a different configuration. We need to analyze the situation for every course, since behavior is different. During the first course, 21-22, Thursday was devoted mainly to lectures, instead of individual work. There are {\em less} submissions on that day than in any other day of the week, even less than Saturdays; this probably implies that lectures are {\em substracting} value to students, instead of adding value to them; Fridays, anyway, registered the top number of submissions, so that class was effectively adding value to students. Next course, 22-23, changed how these classes took place with lectures almost eliminated after a few weeks: submissions on Thursdays and Fridays are much higher than the rest of the days. Surprisingly enough, Fridays are lower than on Thursdays. Paradoxically, this was due to the fact that students {\em expected} lectures on Thursdays, and then attended class that day. Class attendance was dismal on Fridays, but even so, more submissions were made on that day. Situation this course, 23-24, is close to ideal: submission rise on the days leading up to the class (with a dip on Wednesday, which could be explained by the abundance of holidays on that day this year) and they reach its optimum on Thursdays and Fridays, with a relatively small difference. In general, it can be said that the presence of the teacher and other students adds value to them, and this value is inversely proportional to the time devoted to unidirectional lectures.
+
 
 
 \bibliographystyle{ACM-Reference-Format}
