--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -233,6 +233,14 @@ ggplot(entregas.data, aes(x=Weekday.Pass,fill=as.factor(Curso)))+ geom_bar(posit
 
 Figure \ref{fig:weekday.pass} shows the number of objectives approved by day of the week. The situation is similar to the previous one, except for the anomalous number of approvals on Sunday the first year. However, while the first and last year the number of approvals was higher on Friday than on Thursday, the second year there were half as many approvals on Friday than on Thursday. Taking into account the average number of days to approval, this in general implied that students waited for Thursday to understand feedback given by teacher (and other students), and devoted class to it, managing a pass possibly by the end of the class or even when returning home. Very few left it for Friday, since attendance on Fridays was very low. In general, however, this shows that face to face personal explanations in class are a good complement to written reviews in the pull request, and it really adds value to students, helping them overcome the objective. This frequent interaction is also one of the principles in the Agile Manifesto. Together with focusing on activities that add value to the student, like personal or very small group introductions to every objective and face to face feedback on obstacles to achieving the objective, it shows how an agile mindset can be successfully applied in the classroom.
 
+\section{Discussion and conclusions}
+
+In this paper we have described our experience in the use of an agile mindset in computer science education, including using performance indicators from the activity to assess (and eventually improve) course-wide, as well as individual performance. With the use of learning analytics, in this paper we propose two simple metrics that are able to capture most of the activity, and to a certain point the attitude, of the student, as long as the teacher devotes enough time to providing feedback and eventually aproving the learning objectives provided by the student.
+
+The metrics that we have proposed are two: submission and approval time for every objective, and the difference between time, which reflect the time needed by the student to assimilate, and thus pass, every objective. By using collective metrics and proposing specific actions, we were able to improve course performance from last year (22-23) to this one (23-24). This metric also captured the main differences between courses, mainly time needed to pass every objective from the time of submission. Although it is soon to tell, a good methodology leads not only to better results, but also results that are indistinguishable statistically between courses, as shown in Figure \ref{fig:boxplot.course}. This constitutes a positive response to RQ1: metrics, if collected and chosen with precision, can capture main differences between courses, and also be used to improve course performance: measuring time-to-pass every objective individually can be used to target individual students for special attention.
+
+
+
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{../rpg.bib,../dev.bib, ../agile.bib,../learning-analytics.bib,../pbl.bib}
 
