--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -35,8 +35,8 @@
 \orcid{0000-000}
 \affiliation{%
   \institution{Department of XYZ, Edu. U.}
-  \city{Lalaland}
-  \country{World}
+  \city{A City}
+  \country{A Country}
 }
 
 
@@ -46,7 +46,7 @@
 %% other information printed in the page headers. This command allows
 %% the author to define a more concise list
 %% of authors' names for this purpose.
-\renewcommand{\shortauthors}{JJ Merelo}
+\renewcommand{\shortauthors}{A. U. Thor}
 
 %%
 %% The abstract is a short summary of the work to be presented in the
@@ -94,7 +94,11 @@ Manifestos are never enough either in development or teaching, and agile develop
 
 Within this agile mindset, there are teaching methodologies that fit better; adopting these best practices is the first step towards agile teaching. We will focus on two of them that fit well with each other: project-based learning gives the student autonomy (which is one of the items in the manifesto) through the development of a project across one or several subjects \cite{krajcik2006project}; formative evaluation \cite{tessmer1994formative} also fits the autonomous learning part of the manifesto, but also focuses on learning objectives, since it pursues helping the student through continuous feedback on their submitted work (that advances the project mentioned above). This feedback helps continuous improvement of the project they are working with, which is other of the items in the manifesto.
 
-In this paper we will describe the experience carried out in the last three school years in a 4th year (7th semester) subject in the Computer Science degree at the University of Granada, Spain; the subject deals with Cloud Computing, so the project needs to be working towards that final objective. But alongside the description of the experience, we will try to answer the following research questions:\begin{itemize}
+In this paper we will describe the experience carried out in the last three school years in a 4th year (7th semester) subject in the Computer Science degree at the University of A City in A Country
+% Granada, Spain;
+the subject deals with A Subject Matter
+%Cloud Computing,
+so the project needs to be working towards the deployment of an application of that kind. But alongside the description of the experience, we will try to answer the following research questions:\begin{itemize}
 \item {\bf RQ1:} Can you leverage metrics to improve individual and collective learning?
 \item {\bf RQ2:} Are there early indicators or class success or failure?
 \item {\bf RQ3:} Can we measure the effect of flipped learning through the gathered software analytics?
@@ -128,10 +132,11 @@ In general, workload for the teacher is much more intensive than it is for {\em 
 
 During face to face classes, time is spent either addressing issues with specific students, or making small-group explanations to those that have just passed an objective. These whiteboard (never slides) expositions are adapted to specific circumstances of the student of group of students (early submitters, or late ones, for instance). In general, classes are working spaces where students and teacher interact with each other.
 
-After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{https://github.com/JJ/ivR}.
+After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{hidden.u.rl}.
+%\url{https://github.com/JJ/ivR}.
 
-In Spain and for this subject, classes and evaluations are organized in this way:\begin{itemize}
-\item A class period, which takes 15 weeks, for a total of 60 face-to-face hours. This is equivalent to 6 ECTS credits.
+In our country universitary system and for this subject, classes and evaluations are organized in this way:\begin{itemize}
+\item A class period, which takes 15 weeks, for a total of (up to) 60 face-to-face hours. This is equivalent to 6 ECTS credits.
 \item The {\em ordinary evaluation period}, which takes place up to 4 weeks later than the end of classes.
 \item The {\em extraordinary evaluation period}, which takes place up to 3 weeks after the ordinary evaluation period.
 \end{itemize}
@@ -223,7 +228,7 @@ entregas.data %>% mutate(Periodo=Entrega.Week<=15) -> entregas.data
 ggplot(entregas.data, aes(x=as.factor(Entrega.Week), fill=as.factor(Objetivo)))+ scale_fill_brewer(type="div")  + geom_bar(position="identity") + labs(x="Week", y="Number of objectives") + scale_x_discrete( limits=1:22)+theme_bw() + labs(fill="Objective")
 @
 
-Figure \ref{fig:bars.period} shows a barplot of the number of objectives, with color indicating the actual number of objective. We can see what is the usual period of submission for every objective (objective 0 finishing in the second week, for instance, objective 1 in the 5th week, objective 2 in the 7th and so on). Submissions take a dive after the 15th week, but this is due to many factors, including the fact that it is a vacation period and that at least some of the students stop submitting after reaching the minimum number of objectives required for passing. We also see a dip in the 5th week, where there is a national holiday that, in the past years, has implied essentially a week without classes (and certainly without presential classes). This dip repeats itself in the 8th week (another national holiday) and the 13th week (a week-long national holiday, including Constitution day on the 6th of December and Immaculate Conception day on the 8th of December). Submissions hardly recover after that week; in many cases this is due to the students reaching the minimum requirement in week 11 and dropping out. But even if the student wants to continue, it is complicated for them due to the workload in other classes, which usually concentrate on the last week of presential classes. With this data, we can already see that attending class contributes to the submission of objectives. But we need to delve a bit deeper into this data, since it might be other factors, like help from other students, or simply the fact that during weeks with classes the student allocate more time to work (in this and other courses).
+Figure \ref{fig:bars.period} shows a barplot of the number of objectives, with color indicating the actual number of objective. We can see what is the usual period of submission for every objective (objective 0 finishing in the second week, for instance, objective 1 in the 5th week, objective 2 in the 7th and so on). Submissions take a dive after the 15th week, but this is due to many factors, including the fact that it is a vacation period and that at least some of the students stop submitting after reaching the minimum number of objectives required for passing. We also see a dip in the 5th week, where there is a national holiday that, in the past years, has implied essentially a week without classes (and certainly without presential classes). This dip repeats itself in the 8th week (another national holiday) and the 13th week (essentially a week-long national holiday). Submissions hardly recover after that week; in many cases this is due to the students reaching the minimum requirement in week 11 and dropping out. But even if the student wants to continue, it is complicated for them due to the workload in other classes, which usually concentrate on the last week of presential classes. With this data, we can already see that attending class contributes to the submission of objectives. But we need to delve a bit deeper into this data, since it might be other factors, like help from other students, or simply the fact that during weeks with classes the student allocate more time to work (in this and other courses).
 
 <<weekday.submissions, message=FALSE, echo=FALSE, warning=FALSE, fig.height=4, fig.pos="h!tb", fig.cap="Barplot of submissions by day of the week.">>=
 # map dow.entrega to Weekday lunes=Monday, martes=Tuesday, miercoles=Wednesday, jueves=Thursday, viernes=Friday, sabado=Saturday, domingo=Sunday
