--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -207,14 +207,14 @@ ggplot(entregas.data[ entregas.data$Curso == "21-22",], aes(x=Days.to.Superacion
 
 Figure \ref{fig:histogram.diff} shows the histogram of this difference for every objective in every course; this already shows differences between the different courses, that go beyond the different number of students; the first two courses had approximately the same number of students (although, during 21-22, the number of {\em active} students, those that showed up at least one or submitted at least one objective, was much higher), while this year had less students. However, 21-22 and 23-24 show the same distribution, with the mode being student overcoming the objective in 1 week or less, while 22-23 shows that most students took between 1 and 2 weeks to pass every objective. This already shows the descriptive power of this metric: we already know that the results during 22-23 were not good, and this is correlated with the fact that they needed more time to pass every objective.
 
-<<boxplot.pass, message=FALSE, echo=FALSE, warning=FALSE, fig.height=4, fig.pos="h!tb", fig.cap="Boxplot of the difference between the time of submission and the time of approval for every objective, grouped by whether the student passed or not.">>=
+<<boxplot.pass, message=FALSE, echo=FALSE, warning=FALSE, fig.height=3, fig.pos="h!tb", fig.cap="Boxplot of the difference between the time of submission and the time of approval for every objective, grouped by whether the student passed or not.">>=
 ggplot(entregas.data, aes(x=as.factor(Aprobado), y=Days.to.Superacion)) + geom_boxplot(notch = T) + labs(x="Pass", y="Days to approval") + theme_bw() + geom_text(data=entregas.data[entregas.data$Aprobado==FALSE,], aes(label=median(Days.to.Superacion), y=median(Days.to.Superacion)+1,x=FALSE), stat='summary')+ geom_text(data=entregas.data[entregas.data$Aprobado==TRUE,], aes(label=median(Days.to.Superacion), y=median(Days.to.Superacion)+1,x=TRUE), stat='summary')
 #wilcox.test(entregas.data[entregas.data$Aprobado==FALSE,]$Days.to.Superacion, entregas.data[entregas.data$Aprobado==TRUE,]$Days.to.Superacion)
 @
 
 This metric, however, does not distinguish between students who passed and those who fell short of objective number 5, the minimum requirement. Will time-to-pass be a good predictor of success? This is represented in Figure \ref{fig:boxplot.pass}, that shows a boxplot of the number of days to pass an objective (from submission) for those who failed the course (FALSE) and those who passed (TRUE). Median differs, as shown, in 3 days, and the difference is statistically significant (p-value < 0.001), so this metric is a good candidate for being an early indicator of success. However, this is an average over all objectives and over all the class, with objectives with more submissions weighing more. It is also an average over all courses, with path-dependent differences between courses (because it will depend on the student that submits first, and how they help the rest of the student with reviews). We show the boxplot for the different courses in Figure \ref{fig:boxplot.course}, taking into account only students who have passed. In this case, the difference between courses 21-22 and 23-24 is not statistically significant, but the difference between 22-23 and the other two is (p-value < 0.001).
 
-<<boxplot.course, message=FALSE, echo=FALSE, warning=FALSE, fig.height=4, fig.pos="h!tb", fig.cap="Week of submission, colored by objective number.">>=
+<<boxplot.course, message=FALSE, echo=FALSE, warning=FALSE, fig.height=3, fig.pos="h!tb", fig.cap="Boxplot of time needed to pass objectives by course">>=
 ggplot(entregas.data[entregas.data$Aprobado==TRUE,], aes(x=as.factor(Curso), y=Days.to.Superacion, fill=as.factor(Curso))) + geom_boxplot(notch = T) + labs(x="Pass", y="Days to approval",fill="Course") + theme_bw()
 @
 
@@ -249,6 +249,8 @@ Figure \ref{fig:weekday.pass} shows the number of objectives approved by day of 
 In this paper we have described our experience in the use of an agile mindset in computer science education, including using performance indicators from the activity to assess (and eventually improve) course-wide, as well as individual performance. With the use of learning analytics, in this paper we propose two simple metrics that are able to capture most of the activity, and to a certain point the attitude, of the student, as long as the teacher devotes enough time to providing feedback and eventually aproving the learning objectives provided by the student.
 
 The metrics that we have proposed are two: submission and approval time for every objective, and the difference between time, which reflect the time needed by the student to assimilate, and thus pass, every objective. By using collective metrics and proposing specific actions, we were able to improve course performance from last year (22-23) to this one (23-24). This metric also captured the main differences between courses, mainly time needed to pass every objective from the time of submission. Although it is soon to tell, a good methodology leads not only to better results, but also results that are indistinguishable statistically between courses, as shown in Figure \ref{fig:boxplot.course}. This constitutes a positive response to RQ1: metrics, if collected and chosen with precision, can capture main differences between courses, and also be used to improve course performance: measuring time-to-pass every objective individually can be used to target individual students for special attention.
+
+Research question 2 can be answered by looking at the {\em reaction time} in early objectives. Even if submissions are made early, or soon after the previous objective is cleared, managing to get an objective approved in more days than the average, on or beyond the 75\% percentile, will raise a flag and indicate a student that will need special attention. The same happens for the whole class; if the median starts to shift beyond 6 days, the whole class will need some intervention to get a significant amount of students passing the subject. Of course, too many students dropping out of class and stopping making submissions will also be a cause for failure, but the leverage the professor might have in those case is extremely limited. Too much time to pass an objective, however, would indicate that the student has the attitude, if not the aptitude to pass it, so an intervention could have certain impact.
 
 
 
