--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -257,7 +257,7 @@ The answer to RQ3 can be seen mainly in Figures \ref{fig:bars.period}, \ref{fig:
 
 This analytics system, which was deployed from the first year (with small variations), allowed us to make different interventions, not all of them successful. To avoid the high dropout rate in the first objectives, we started a hackathon in the first week of class of 22-23. Unfortunately, this intervention did not achieve its objective, and that was clearly seen in the analytics of the first weeks. However, starting a hackathon to pass objectives 2 and 3 had a limited success, and helped some students to get back on track. The first-week hackathon was not repeated, and in the first days of this course 23-24 we introduced another gamification experience, that will be described elsewhere in this conference; this achieved its short-term objectives, as the analytics show, and apparently some long-term objectives too.
 
-In general we can conclude that an agile mindset of serving the customer and adapting specific class circumstances, as shown by the learning analytics and its comparison, will boost student success and efficient acquisition of engineering best practices and skills.
+In general we can conclude that an agile mindset of serving the customer and adapting specific class circumstances, as shown by the learning analytics and its comparison, will boost student success and efficient acquisition of engineering best practices and skills. Besides, the learning analytics system is totally independent of the platform that is used for assessing student's submissions. As long as the submission time and when it is passed is known with precision, the same measurements can be applied; these measures can be downloaded from a LMS or simply noted in a spreadsheet.
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{../rpg.bib,../dev.bib, ../agile.bib,../learning-analytics.bib,../pbl.bib}
