--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -246,6 +246,7 @@ ggplot(entregas.data, aes(x=Weekday.Pass,fill=as.factor(Curso)))+ geom_bar(posit
 Figure \ref{fig:weekday.pass} shows the number of objectives approved by day of the week. The situation is similar to the previous one, except for the anomalous number of approvals on Sunday the first year. However, while the first and last year the number of approvals was higher on Friday than on Thursday, the second year there were half as many approvals on Friday than on Thursday. Taking into account the average number of days to approval, this in general implied that students waited for Thursday to understand feedback given by teacher (and other students), and devoted class to it, managing a pass possibly by the end of the class or even when returning home. Very few left it for Friday, since attendance on Fridays was very low. In general, however, this shows that face to face personal explanations in class are a good complement to written reviews in the pull request, and it really adds value to students, helping them overcome the objective. This frequent interaction is also one of the principles in the Agile Manifesto. Together with focusing on activities that add value to the student, like personal or very small group introductions to every objective and face to face feedback on obstacles to achieving the objective, it shows how an agile mindset can be successfully applied in the classroom.
 
 \section{Discussion and conclusions}
+\label{sec:conclusions}
 
 In this paper we have described our experience in the use of an agile mindset in computer science education, including using performance indicators from the activity to assess (and eventually improve) course-wide, as well as individual performance. With the use of learning analytics, in this paper we propose two simple metrics that are able to capture most of the activity, and to a certain point the attitude, of the student, as long as the teacher devotes enough time to providing feedback and eventually aproving the learning objectives provided by the student.
 
